test/cli/test-result-kind/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: good-pinned-tag
spec:
  selector:
    matchLabels:
      app: good-pinned-tag
  template:
    metadata:
      labels:
        app: good-pinned-tag
    spec:
      containers:
      - name: nginx
        image: nginx:1.27.3
