test/cli/test-result-kind/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: same-name-different-kind
policies:
- policy.yaml
resources:
- deployment.yaml
- statefulset.yaml
results:
- policy: disallow-latest-tag
  kind: Deployment
  resources:
  - good-pinned-tag
  result: pass
- policy: disallow-latest-tag
  kind: StatefulSet
  resources:
  - good-pinned-tag
  result: fail
